# control-panel

./: .gitignore  .webreplignore  README.md  account_manager.py  app.py  console_commands.py  control_panel.py  crt_fragment_shader.frag  debug_util.py  dmx.py  dmx_monitor.py  esp_requests.py  game_manager.py  gameobject.py  laser_game.py  main.py  manifest.py  pygame_monitor.py  pyproject.toml  quad_vertex_shader.vert  radar.py  requirements.txt  rotary_encoder.py  setup.py  shaders.py  shaders_setup.py  shehds_moving_head.py  stl_renderer.py  utils.py  video_player.py  window_manager.py  window_manager_setup.py
controlpanel/: .webreplignore  __init__.py  __main__.py  main.py
controlpanel/api/: __init__.py  api.py  callback.py  commons.py  event_manager.py  get_device.py  get_device.pyi  load_scripts.py  load_scripts_helper.py  services.py  typed_event.py
controlpanel/dmx/: __init__.py  devices.py  dmx.py  manifest.py
controlpanel/event_manager/: __init__.py  commons.py  device_getter.py  event_manager.py  generate_overloads.py  instantiate_manifest.py
controlpanel/game_manager/: dev_console.py  game_manager.py  games.py  utils.py
controlpanel/gui/: utils.py
controlpanel/linting/: restricted_checker.py
controlpanel/micropython_sdk/: .gitignore  .webreplignore  __init__.py  boot.py  device_manifest.py  esp_manifest.py  hostname_manifest.py  main_biesenthuer.py  main_chronometer.py  main_kommunikation.py  main_ladestation.py  main_mainframe.py  main_pilz.py  main_waehlscheibe.py  main_wartung.py  utils.py
controlpanel/scripts/: 38c3.py  __init__.py  battery.py  bvg_panel.py  console.py  countdown.py  gameoflife.py  gui_mysticcreatures.py  keyboard.py  kurvenfieber.py  moving_head.py  preset_mysticcreatures.txt  testscript.py
controlpanel/server/: app.py
controlpanel/shaders/: shader_manifest.py  shaders.py
controlpanel/shared/: compatibility.py  device_manifest.json  device_manifest.py  hostname_manifest.py  mixins.py  subkey_manifest.py
controlpanel/upy/: boot.py  (+15 more)
deprecated/: cursor.py  video_player.py
dmx/: __init__.py  dmx.py  dmx_devices.py  example.py
examples/: rotary_encoder.py  rotary_encoder2.py
media/: fox_centered.stl
shaders/: add.frag  crt.frag  crt_fragment_shader300es.frag  crt_fragment_shader310.frag  downscale.frag  ghost.frag  quad_vertex_shader210.vert  quad_vertex_shader310.vert  to_bgra.frag
static/: style.css
templates/: index.html  status.html
widgets/: __init__.py  button.py  dmx_monitor.py  image.py  input_box.py  laser_game.py  log.py  login_window.py  radar.py  stl_renderer.py  taskbar.py  terminal.py  video_player.py  widget.py
(+296 files in other folders)
