[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "control-panel"
version = "0.0.1"
description = ""
authors = [
    { name = "Dachboden", email = "info@dachboden.berlin" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame",
    "pyftdi",
    "moderngl",
    "numpy",
    "anaconsole @ git+https://github.com/AsinoEsel/anaconsole-pygame.git@main#egg=anaconsole",
    "artnet-python @ git+https://github.com/AsinoEsel/artnet-python.git@main#egg=artnet",
    "control-panel-terminal @ git+https://github.com/AsinoEsel/control-panel-terminal.git@main",
]

[project.scripts]
controlpanel = "controlpanel.main:main"
build_overloads = "controlpanel.event_manager.generate_overloads:main"
transfer = "controlpanel.upy.transfer.transfer:transfer"
flash_firmware = "controlpanel.upy.firmware.flash_firmware:main"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"controlpanel.shared" = ["*.json",]
"controlpanel.game_manager" = ["icon.png"]
